--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <title>
-  Slave-Factory
+  Slave-Factory Web Page
 </title>
   <script src="https://hypothes.is/embed.js" async></script>
  </head>
  <body>
-Annotations to Tract Two: Negroe Slaves in the Colonies
+Annotations to Tract Two: Negroe Slaves in the Colonies <br>
   </body>
 </html>
