--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
  </head>
  <body>
 Annotations to Tract Two: Negroe Slaves in the Colonies <br>
-More lines of stuff to edit.<br>
-One more line to annotate
+<h1> If he teaches his Negroe to read one book, he will of himself read another, and such has been the imprudence of fome infomed writers, that books are not wanting to exhort the Negroes to rebel againft their mafters. </hl>
+<p>The fear of slaves to gain knowledge and understanding of slave codes. Masters prohibited to teach slaves to read or write. </p> 
+<h2> If however on the other hand the purchasing Negroes for slaves be confifent with divine and human obligations, care fhould be taken top fecure the property of the flave to his owner underall circumstantftances; and fuch a plan of inftruction fhould be digefted, as might belt conduce to the Negroes welfare,without making them uneafy in their conditions, or encoujraging them to revolt against their owner </h2>
+<p> White Europeans truly believed it was a Godly principle to support slavery and refusal all forms of educatioing slaves. </p>
+<h3>Thefe things are mentioned either to excufe the policy of the slave flates by their example; or to cefure thofe who have done them; but in order to obviate a vulgar reflection on African traders, </h3>
+<p> The approval of slavery has existed since biblical times for profits, so, let's not frown on the slave trader... </p>
+   
   </body>
 </html>
